code-blocks-server/code-blocks/tests/rust/snapshots/rust__move_block_outside_scope_fails2.snap
---
source: code-blocks/tests/rust/main.rs
expression: snapshot
---
input:

    mod m {
/*  ^fail */
        fn foo() {}
     /* ^src */
    }

    fn baz() {}

---
output:
Illegal move operation

Caused by:
    Blocks have different parents
