code-blocks-server/code-blocks/tests/rust/snapshots/rust__move_block_up.snap
---
source: code-blocks/tests/rust/main.rs
expression: snapshot
---
input:

    fn foo() {}
 /* ^dst */

    fn bar() {}

    fn baz() {}
 /* ^src */

---
output:

    fn foo() {}
    ^ Dest

    fn baz() {}
    ^ Source
 /* ^dst */

    fn bar() {}
 /* ^src */
