code-blocks-server/code-blocks/tests/rust/snapshots/rust__move_block_up2.snap
---
source: code-blocks/tests/rust/main.rs
expression: snapshot
---
input:

    mod m1 { // dst
        fn foo() {}
    }

    mod m2 {
        fn bar() {}
    }

    mod m3 { // src
        fn baz() {}
    }

---
output:

    mod m1 { // dst
    ^ Dest
        fn foo() {}
    }

    mod m3 { // src
    ^ Source
        fn baz() {}
    }

    mod m2 {
        fn bar() {}
    }
