code-blocks-server/code-blocks/tests/rust/snapshots/rust__move_block_with_attributes.snap
---
source: code-blocks/tests/rust/main.rs
expression: snapshot
---
input:

    #[test]
    fn foo() {}
/*  ^src */

    fn bar() {}
/*  ^dst */

---
output:

    /*  ^src */

    fn bar() {}
    ^ Dest

    #[test]
    ^ Source
    fn foo() {}
/*  ^dst */
